fix: linting updates

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,10 +3,10 @@ AllCops:
   TargetRubyVersion: 3.1
   NewCops: enable
   Exclude:
-    - 'contrib/**/*'
-    - 'gen/**/*'
-    - 'vendor/**/*'
-    - 'bin/*'
+    - "contrib/**/*"
+    - "gen/**/*"
+    - "vendor/**/*"
+    - "bin/*"
 
 # Style preferences
 Style/Documentation:
@@ -25,17 +25,17 @@ Style/StringLiteralsInInterpolation:
 Metrics/MethodLength:
   Max: 30
   Exclude:
-    - 'test/**/*'
-    - 'spec/**/*'
+    - "test/**/*"
+    - "spec/**/*"
 
 Metrics/ClassLength:
   Max: 200
 
 Metrics/BlockLength:
   Exclude:
-    - 'test/**/*'
-    - 'spec/**/*'
-    - '*.gemspec'
+    - "test/**/*"
+    - "spec/**/*"
+    - "*.gemspec"
 
 Metrics/AbcSize:
   Max: 30
@@ -44,11 +44,11 @@ Metrics/AbcSize:
 Layout/LineLength:
   Max: 120
   Exclude:
-    - 'test/**/*'
-    - 'spec/**/*'
+    - "test/**/*"
+    - "spec/**/*"
 
 # Naming
 Naming/FileName:
   Exclude:
-    - 'Gemfile'
-    - 'Rakefile'
+    - "Gemfile"
+    - "Rakefile"
