--- a/conformance/expected_failures.yaml
+++ b/conformance/expected_failures.yaml
@@ -3,9 +3,60 @@
 # This file lists test cases that are known to fail.
 # As the implementation matures, this list should be reduced.
 #
-# Format: List of test case paths that are expected to fail
+# Format: Map of suite name to list of case paths
 # Example:
-#   - standard_rules/well_known_types/duration
-#   - custom_rules/cel_expression
+#   standard_rules:
+#     - duration/valid
+#   custom_rules:
+#     - cel_expression/valid
 
-# No expected failures yet - add as needed during conformance testing
+# ============================================================================
+# CEL list comprehension .map() not supported in cel-ruby
+# These predefined rules use expressions like `rule.map(n, -n)` which fail
+# because cel-ruby doesn't support .map() on lists.
+# Issue: Need to add .map() support to cel-ruby upstream
+# ============================================================================
+
+predefined_rules:
+  # int32 predefined rules (use int32_abs_in which requires .map())
+  - proto2/int32/valid
+  - proto2/int32/invalid
+  - proto3/int32/valid
+  - proto3/int32/invalid
+  - proto/2023/int32/valid
+  - proto/2023/int32/invalid
+  # int64 predefined rules (use int64_abs_in which requires .map())
+  - proto2/int64/valid
+  - proto2/int64/invalid
+  - proto3/int64/valid
+  - proto3/int64/invalid
+  - proto/2023/int64/valid
+  - proto/2023/int64/invalid
+  # wrapped int32 predefined rules (use int32_abs_in which requires .map())
+  - proto2/wrapped/int32/valid
+  - proto2/wrapped/int32/invalid
+  - proto3/wrapped/int32/valid
+  - proto3/wrapped/int32/invalid
+  - proto/2023/wrapped/int32/valid
+  - proto/2023/wrapped/int32/invalid
+  # wrapped int64 predefined rules (use int64_abs_in which requires .map())
+  - proto2/wrapped/int64/valid
+  - proto2/wrapped/int64/invalid
+  - proto3/wrapped/int64/valid
+  - proto3/wrapped/int64/invalid
+  - proto/2023/wrapped/int64/valid
+  - proto/2023/wrapped/int64/invalid
+  # repeated wrapped int32 predefined rules (use int32_abs_in which requires .map())
+  - proto2/repeated/wrapped/int32/valid
+  - proto2/repeated/wrapped/int32/invalid
+  - proto3/repeated/wrapped/int32/valid
+  - proto3/repeated/wrapped/int32/invalid
+  - proto/2023/repeated/wrapped/int32/valid
+  - proto/2023/repeated/wrapped/int32/invalid
+  # repeated wrapped int64 predefined rules (use int64_abs_in which requires .map())
+  - proto2/repeated/wrapped/int64/valid
+  - proto2/repeated/wrapped/int64/invalid
+  - proto3/repeated/wrapped/int64/valid
+  - proto3/repeated/wrapped/int64/invalid
+  - proto/2023/repeated/wrapped/int64/valid
+  - proto/2023/repeated/wrapped/int64/invalid
